--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,7 @@ url = "2.5.4"
 sha2 = { version = "0.10.9", optional = true }
 regex = { version = "1.11.1", optional = true }
 sha1 = { version = "0.10.6", optional = true }
-# TODO: look at forking voice_activity_detector to include passthrough args for CUDA + COREML execution providers
-# Also: change the default session to try-load said execution providers (see Ort docs).
-# Also twice: There seems to be some major problems with Silero (v5) and quiet speech; consider falling back to previous.
-voice_activity_detector = "0.2.1"
+voice_activity_detector = {path = "external/voice_activity_detector"} 
 earshot = "0.1.0"
 webrtc-vad = "0.4.0"
 parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
