--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license-notes = "Includes third-party code under MPL-2.0 and BSD-3-Clause. See L
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 serde_json = { version = "1.0.142", optional = true }
 rubato = { version = "0.16.2", optional = true }
-whisper-rs = { version = "0.15.0", features = ["log_backend", "tracing_backend"] }
+whisper-rs = { version = "0.15.0"}
 whisper-rs-sys = "0.14.0"
 sdl2 = { version = "0.38.0", optional = true }
 reqwest = { version = "0.12.23", features = ["blocking", "stream"], optional = true }
@@ -59,7 +59,7 @@ ar = "C:\\msys64\\ucrt64\\bin\\ar.exe"
 
 [features]
 default = ["sdl2"]
-ribble-logging = ["dep:log"]
+ribble-logging = ["dep:log", "whisper-rs/log_backend", "whisper-rs/tracing_backend"]
 sdl2 = ["dep:sdl2"]
 sdl2-static = ["sdl2", "sdl2/static-link", "sdl2/bundled"]
 all = ["downloader-async", "resampler", "integrity", "crossbeam", "serde", "sdl2"]
