Update .gitignore, remove old license files

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /data/
 /tests/OSR_us_000_0060_8k.wav
 /tests/audio_files/
-about.hbs
-about.toml
-THIRD_PARTY_LICENSES.html
-generate_licenses.sh
+/about.hbs
+/about.toml
+/THIRD_PARTY_LICENSES.html
+/generate_licenses.sh
